--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,38 @@ OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_BASE_URL=https://api.openai.com/v1
 MODEL_NAME=gpt-3.5-turbo
 
+# DeepSeek API配置
+DEEPSEEK_API_KEY=your_deepseek_api_key_here
+DEEPSEEK_BASE_URL=https://api.deepseek.com/v1
+DEEPSEEK_MODEL=deepseek-chat
+
+# BigModel API配置
+BIGMODEL_API_KEY=your_bigmodel_api_key_here
+BIGMODEL_BASE_URL=https://open.bigmodel.cn/api/paas/v4
+BIGMODEL_MODEL=embedding-2
+
+# MySQL数据库配置
+MYSQL_HOST=your_mysql_host
+MYSQL_PORT=20236
+MYSQL_USER=root
+MYSQL_PASSWORD=your_mysql_password
+MYSQL_DATABASE=gauz_ai_messages
+
+# MinIO配置
+MINIO_ENDPOINT=your_minio_endpoint
+MINIO_ACCESS_KEY=your_minio_access_key
+MINIO_SECRET_KEY=your_minio_secret_key
+MINIO_BUCKET_NAME=engineering-drawings
+
+# OpenRouter API配置 (用于Gemini)
+OPENROUTER_API_KEY=your_openrouter_api_key
+
 # 服务器配置
 HOST=0.0.0.0
 PORT=8000
 DEBUG=False
 
-# 数据库配置（如果需要）
+# 数据库配置
 DATABASE_URL=sqlite:///./engineering_rag.db
 
 # 系统配置
