--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ pydantic==2.5.2
 chromadb>=0.4.15
 openai>=1.3.0
 python-multipart==0.0.6
+python-dotenv>=1.0.0
 jinja2>=3.1.0
 numpy>=1.21.0
 pandas>=1.5.0
